--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -73,7 +73,7 @@ The author of this thesis takes code availability and reproducibility seriously.
 
 The first benchmark script is for the GPU-accelerated BSS metrics computation using the CuPy library from section \ref{sec:fasterbsscupy}. Recall that the forked copy of the library\footnote{\url{https://github.com/sevagh/sigsep-mus-eval}} contains the modifications made for this thesis. The benchmark script can be viewed here.\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/benchmark_cupy_eval.py}} For the 14 validation tracks of MUSDB18-HQ, it creates a random estimate (using \Verb#numpy.randn# to create an audio signal), and computes the BSS metrics. It measures the time for each BSS metric computation, summed across 14 tracks and repeated for 10 iterations. The final time is the total time for all 14 tracks, divided by 10 to account for the iterations. Three copies of the script were run; one with the argument \Verb#--disable-cupy# to use the CPU code with SciPy and NumPy functions on a Ryzen 5950X with 64GB RAM, one with the argument \Verb#--cuda-device=0# to use the NVIDIA RTX 3080 Ti GPU, and one with the argument \Verb#--cuda-device=1# to use the NVIDIA RTX 2070 Super GPU.
 
-The results were that the regular BSS metrics evaluation on the CPU took 1485.77 seconds, compared to the CuPy GPU-accelerated code which took 585.33 seconds with the 3080 Ti and 738.39 seconds with the weaker 2070 Super. The speedup from CuPy is \textasciitilde 2-2.5x over the Ryzen 5950X CPU. This is a significant reduction that can aid in future large-scale source separation evaluation campaigns like SiSec (\cite{sisec2016}, \cite{sisec2018}). Also, note the passing regression test in listing \ref{lst:regressionout}, showing that the library is working correctly with the speedup.
+The results were that the regular BSS metrics evaluation on the CPU took 1,485.77 seconds, compared to the CuPy GPU-accelerated code which took 585.33 seconds with the 3080 Ti and 738.39 seconds with the weaker 2070 Super. The speedup from CuPy is \textasciitilde 2-2.5x over the Ryzen 5950X CPU. This is a significant reduction that can aid in future large-scale source separation evaluation campaigns like SiSec (\cite{sisec2016}, \cite{sisec2018}). Also, note the passing regression test in listing \ref{lst:regressionout}, showing that the library is working correctly with the speedup.
 
 \begin{listing}[h]
   \centering
@@ -104,7 +104,7 @@ tests/test_regression.py::test_one_estimate[Music Delta - 80s Rock] PASSED
 
 \subsubsection{Faster NSGT/sliCQT with PyTorch}
 
-The second benchmark script is for the PyTorch implementation of the NSGT/sliCQT library from section \ref{sec:torchslicq}. The forked copy of the library contains the PyTorch implementation,\footnote{\url{https://github.com/sevagh/nsgt}} and the benchmark scripts were added in the same repository.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/examples/benchmark.py, https://github.com/sevagh/nsgt/blob/main/examples/run_bench.sh}} The benchmark does the forward and backward sliCQT using the Bark scale with 50 bins between 20--22050 Hz. The sliCQT is taken on a 3:54 minute mixed song from the MUSDB18-HQ dataset, ``Zeno - Signs.'' The sliCQT parameters were chosen so that the transform of the song occupied a maximum of 7.2 GB of memory and could fit on the smallest memory device being benchmarked, the NVIDIA 2070 Super. The computation time was measured and averaged across 100 iterations. The cost of the memory transfer of the song to the GPU was not included in the measurement. Tables \ref{table:nsgttorchresultsmatrix} and \ref{table:nsgttorchresultsragged} show the benchmark results for the matrix and ragged sliCQT respectively.
+The second benchmark script is for the PyTorch implementation of the NSGT/sliCQT library from section \ref{sec:torchslicq}. The forked copy of the library contains the PyTorch implementation,\footnote{\url{https://github.com/sevagh/nsgt}} and the benchmark scripts were added in the same repository.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/examples/benchmark.py, https://github.com/sevagh/nsgt/blob/main/examples/run_bench.sh}} The benchmark does the forward and backward sliCQT using the Bark scale with 50 bins between 20--22,050 Hz. The sliCQT is taken on a 3:54 minute mixed song from the MUSDB18-HQ dataset, ``Zeno - Signs.'' The sliCQT parameters were chosen so that the transform of the song occupied a maximum of 7.2 GB of memory and could fit on the smallest memory device being benchmarked, the NVIDIA 2070 Super. The computation time was measured and averaged across 100 iterations. The cost of the memory transfer of the song to the GPU was not included in the measurement. Tables \ref{table:nsgttorchresultsmatrix} and \ref{table:nsgttorchresultsragged} show the benchmark results for the matrix and ragged sliCQT respectively.
 
 \begin{table}[ht]
 	\centering
@@ -158,13 +158,13 @@ The execution time of the transform improved with PyTorch. The GPUs have an adva
 
 The random hyperparameter search was done to maximize the median SDR score of the MPI oracle across all 4 targets for 60 iterations. The search script is available here,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/scripts/slicq_explore.py}} and there is also some additional documentation related to the parameter search in the code repository.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/docs/slicq_params.md}} The background and parameter range decisions for the search was discussed in \ref{sec:mpiparam}. For demonstration purposes, the inverse SDR score ($-1.0*\text{SDR}$) was maximized in a second search, to find a ``bad'' sliCQT. Repeating the parameter search yields slightly different sliCQT configurations due to the randomness, which is controlled by a script parameter for the random seed.
 
-The sliCQT chosen by one run of the script that produced the best median SDR used 262 bins on the Bark scale between 32.9--22050 Hz, called the ``good sliCQT.'' This is the sliCQT used in the final neural network, xumx-sliCQ. The sliCQT params chosen by the inverse SDR maximization which produced the worst median SDR, or the ``bad sliCQT,'' used 142 bins on the Constant-Q or logarithmic scale between 129.7--22050 Hz. Figure \ref{fig:bipolarslicqs} shows the sliCQT magnitude spectrograms.
+The sliCQT chosen by one run of the script that produced the best median SDR used 262 bins on the Bark scale between 32.9--22,050 Hz, called the ``good sliCQT.'' This is the sliCQT used in the final neural network, xumx-sliCQ. The sliCQT params chosen by the inverse SDR maximization which produced the worst median SDR, or the ``bad sliCQT,'' used 142 bins on the Constant-Q or logarithmic scale between 129.7--22,050 Hz. Figure \ref{fig:bipolarslicqs} shows the sliCQT magnitude spectrograms.
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Good sliCQT -- Bark, 262 bins, 32.9--22050 Hz]{\includegraphics[width=0.475\textwidth]{./images-gspi/slicqt_good.png}}
+	\subfloat[Good sliCQT -- Bark, 262 bins, 32.9--22,050 Hz]{\includegraphics[width=0.475\textwidth]{./images-gspi/slicqt_good.png}}
 	\hspace{0.1em}
-	\subfloat[Bad sliCQT -- Constant-Q/log, 142 bins, 129.7--22050 Hz]{\includegraphics[width=0.475\textwidth]{./images-gspi/slicqt_bad.png}}
+	\subfloat[Bad sliCQT -- Constant-Q/log, 142 bins, 129.7--22,050 Hz]{\includegraphics[width=0.475\textwidth]{./images-gspi/slicqt_bad.png}}
 	\caption{sliCQTs from the MPI oracle hyperparameter search}
 	\label{fig:bipolarslicqs}
 \end{figure}
@@ -180,17 +180,21 @@ The full oracle evaluation on both of these sliCQT parameters are shown in the b
 
 \subsubsection{sliCQT dimensionality analysis}
 
-The slice length and transition length for the 262-bin Bark scale sliCQT with frequency limits of 32.9--22050 Hz are automatically chosen to be 18060 and 4514 samples respectively.
+The slice length and transition length for the 262-bin Bark scale sliCQT with frequency limits of 32.9--22,050 Hz are automatically chosen to be 18,060 and 4,514 samples respectively.
 
 The input data to xumx-sliCQ was split into to sequences of a 1 second duration. The slice length of the chosen scale results in 1 second of audio containing 9 slices. Each slice consists of a number of time coefficients that varies with the frequency bin. The ragged transform contains 70 buckets of frequency bins grouped by their time resolution. Tables \ref{table:slicqdim1} and \ref{table:slicqdim2} show each bucket in the ragged transform with its original 3D shape ($\text{slice} \times \text{frequency} \times \text{time}$), and the flattened and overlap-added 2D shapes ($\text{time} \times \text{frequency}$).
 
 Note that the channel dimension is omitted from the table. There is one spectrogram for each channel of audio, resulting in an additional $(,2)$ dimension added to the sliCQT shape from the 2 channels of the stereo training data. The flattened shape is a result of concatenating the $\text{slice} \times \text{time}$ blocks together; e.g., to flatten $9 \times 10$ results in $90$. The overlap-add considers a $\sfrac{\text{time}}{2}$ overlap between each adjacent slice of size.
 
-It is instructive to compare the dimensionality of the chosen sliCQT parameters to the matrix form of the sliCQT, and to the STFT with a window size of 4096 and an overlap of 1024.
+It is instructive to compare the dimensionality of the chosen sliCQT parameters to the matrix form of the sliCQT, and to the STFT with a window size of 4,096 and an overlap of 1,024.
 
-The matrix form of the same sliCQT results in a 3D $\text{slice} \times \text{frequency} \times \text{time}$ shape of $9 \times 263 \times 292$, representing the same 9 slices for 1 second of audio as the ragged transform, and 263 frequency bins, which includes the 0--32.9 Hz bin added to the 262 we specified between 32.9--22050 Hz. The time coefficients are of length 292, which as shown in table \ref{table:slicqdim2} is the maximum time resolution of the highest frequency bin. The other frequency bins have some operations performed including zero-padding to fit the same dimension. The 2D $\text{frequency} \times \text{time}$ shapes are $263 \times 1022$ for the overlap-added spectrogram and $263 \times 1752$ for the flattened spectrogram.
+The matrix form of the same sliCQT results in a 3D $\text{slice} \times \text{frequency} \times \text{time}$ shape of $9 \times 263 \times 292$, representing the same 9 slices for 1 second of audio as the ragged transform, and 263 frequency bins, which includes the 0--32.9 Hz bin added to the 262 we specified between 32.9--22,050 Hz. The time coefficients are of length 292, which as shown in table \ref{table:slicqdim2} is the maximum time resolution of the highest frequency bin. The other frequency bins have some operations performed including zero-padding to fit the same dimension. The 2D $\text{frequency} \times \text{time}$ shapes are $263 \times 1{,}022$ for the overlap-added spectrogram and $263 \times 1{,}752$ for the flattened spectrogram.
 
-The STFT with a window of 4096 and overlap of 1024 results in a $\text{frequency} \times \text{time}$ transform of shape $2049 \times 40$, where 2049 is the number of non-redundant output frequencies of the STFT, computed by $\sfrac{4096}{2} + 1$. The 40 frames are computed from the signal length (or 44100 samples for 1s of audio), window size, and overlap as follows: $\text{floor}(\sfrac{44100-4096}{1024}) + 1 = 40$. Note the considerably smaller time coefficients of 40 frames representing 1 second of audio, which is uniform across all 2049 output frequencies.
+The STFT with a window of 4,096 and overlap of 1,024 results in a $\text{frequency} \times \text{time}$ transform of shape $2{,}049 \times 40$, where 2,049 is the number of non-redundant output frequencies of the STFT, computed by $\sfrac{4{,}096}{2} + 1$. The 40 frames are computed from the signal length (or 44,100 samples for 1s of audio), window size, and overlap using Equation \ref{equation:stftframes}. Note the considerably smaller time coefficients of 40 frames representing 1 second of audio, which is uniform across all 2,049 output frequencies.
+
+\begin{align}
+\text{floor}(\frac{44{,}100-4{,}096}{1{,}024}) + 1 = 40
+\end{align}
 
 \begin{table}[ht]
 	\centering
@@ -363,7 +367,7 @@ The STFT with a window of 4096 and overlap of 1024 results in a $\text{frequency
 
 \subsubsection{Learning parameters and training curves}
 
-The learning hyperparameters of xumx-sliCQ were mostly kept the same to Open-Unmix and CrossNet-Open-Unmix. The training uses an Adam optimizer which runs for 1000 iterations (or epochs), with a learning rate of 0.001 and a weight decay of 0.00001. There is also an adaptive learning rate scheduler with a decay patience of 80 and a decay gamma of 0.3. A difference between the learning hyperparameters of X-UMX and UMX is that the network trains for the full 1000 epochs without any early stopping, which was also incorporated in xumx-sliCQ.
+The learning hyperparameters of xumx-sliCQ were mostly kept the same to Open-Unmix and CrossNet-Open-Unmix. The training uses an Adam optimizer which runs for 1,000 iterations (or epochs), with a learning rate of 0.001 and a weight decay of 0.00001. There is also an adaptive learning rate scheduler with a decay patience of 80 and a decay gamma of 0.3. A difference between the learning hyperparameters of X-UMX and UMX is that the network trains for the full 1,000 epochs without any early stopping, which was also incorporated in xumx-sliCQ.
 
 Recall from section \ref{sec:xumxinc} that X-UMX includes the cross-domain loss (CL), with a mixing coefficient between the magnitude spectrogram loss and the time-domain SDR loss. The mixing coefficient in X-UMX is 10.0, but in xumx-sliCQ it is set to 0.1 to reflect the observed order of magnitude difference in the MSE loss of the STFT and the sliCQT. xumx-sliCQ reports 6,669,912 trainable parameters in total from the torchinfo\footnote{\url{https://github.com/TylerYep/torchinfo}} package. The training curves can be seen in figure \ref{fig:networkloss}, visualized using Tensorboard,\footnote{\url{https://www.tensorflow.org/tensorboard/}} a training visualization tool.
 
@@ -372,7 +376,7 @@ Recall from section \ref{sec:xumxinc} that X-UMX includes the cross-domain loss 
 	\subfloat[Train loss]{\includegraphics[width=\textwidth]{./images-neural/train_loss.png}}
 	\hspace{0.5em}
 	\subfloat[Validation loss]{\includegraphics[width=\textwidth]{./images-neural/valid_loss.png}}
-	\caption{Tensorboard loss curves for xumx-sliCQ, 1000 epochs}
+	\caption{Tensorboard loss curves for xumx-sliCQ, 1,000 epochs}
 	\label{fig:networkloss}
 \end{figure}
 
