--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -190,11 +190,12 @@ It is instructive to compare the dimensionality of the chosen sliCQT parameters 
 
 The matrix form of the same sliCQT results in a 3D $\text{slice} \times \text{frequency} \times \text{time}$ shape of $9 \times 263 \times 292$, representing the same 9 slices for 1 second of audio as the ragged transform, and 263 frequency bins, which includes the 0--32.9 Hz bin added to the 262 we specified between 32.9--22,050 Hz. The time coefficients are of length 292, which as shown in table \ref{table:slicqdim2} is the maximum time resolution of the highest frequency bin. The other frequency bins have some operations performed including zero-padding to fit the same dimension. The 2D $\text{frequency} \times \text{time}$ shapes are $263 \times 1{,}022$ for the overlap-added spectrogram and $263 \times 1{,}752$ for the flattened spectrogram.
 
-The STFT with a window of 4,096 and overlap of 1,024 results in a $\text{frequency} \times \text{time}$ transform of shape $2{,}049 \times 40$, where 2,049 is the number of non-redundant output frequencies of the STFT, computed by $\sfrac{4{,}096}{2} + 1$. The 40 frames are computed from the signal length (or 44,100 samples for 1s of audio), window size, and overlap using Equation \ref{equation:stftframes}. Note the considerably smaller time coefficients of 40 frames representing 1 second of audio, which is uniform across all 2,049 output frequencies.
-
+The STFT with a window of 4,096 and overlap of 1,024 results in a $\text{frequency} \times \text{time}$ transform of shape $2{,}049 \times 40$, where 2,049 is the number of non-redundant output frequencies of the STFT, computed by $\sfrac{4{,}096}{2} + 1$. The 40 frames are computed from the signal length (or 44,100 samples for 1s of audio), window size, and overlap using Equation \ref{equation:stftframes}:
 \begin{align}
-\text{floor}(\frac{44{,}100-4{,}096}{1{,}024}) + 1 = 40
+	\text{floor}(\frac{44{,}100-4{,}096}{1{,}024}) + 1 = 40\tag{11}\label{equation:stftframes}
 \end{align}
+
+Note the considerably smaller time coefficients of 40 frames representing 1 second of audio, which is uniform across all 2,049 output frequencies.
 
 \begin{table}[ht]
 	\centering
@@ -203,78 +204,77 @@ The STFT with a window of 4,096 and overlap of 1,024 results in a $\text{frequen
 		Block & Frequency bins & 3D shape & 2D overlap-add shape & 2D flat shape \\
 	 \hline
 	 \hline
-
-0 & 0 & (9,1,28) & (1,98) & (1,168) \\
+0 & 0 & (9, \ 1, \ 28) & (1, \ 98) & (1, \ 168) \\
 \hline
-1 & 1--86 & (9,86,16) & (86,56) & (86,96) \\
+1 & 1--86 & (9, \ 86, \ 16) & (86, \ 56) & (86, \ 96) \\
 \hline
-2 & 87--100 & (9,14,20) & (14,70) & (14,120) \\
+2 & 87--100 & (9, \ 14, \ 20) & (14, \ 70) & (14, \ 120) \\
 \hline
-3 & 101--111 & (9,11,24) & (11,84) & (11,144) \\
+3 & 101--111 & (9, \ 11, \ 24) & (11, \ 84) & (11, \ 144) \\
 \hline
-4 & 112--120 & (9,9,28) & (9,98) & (9,168) \\
+4 & 112--120 & (9, \ 9, \ 28) & (9, \ 98) & (9, \ 168) \\
 \hline
-5 & 121--128 & (9,8,32) & (8,112) & (8,192) \\
+5 & 121--128 & (9, \ 8, \ 32) & (8, \ 112) & (8, \ 192) \\
 \hline
-6 & 129--135 & (9,7,36) & (7,126) & (7,216) \\
+6 & 129--135 & (9, \ 7, \ 36) & (7, \ 126) & (7, \ 216) \\
 \hline
-7 & 136--141 & (9,6,40) & (6,140) & (6,240) \\
+7 & 136--141 & (9, \ 6, \ 40) & (6, \ 140) & (6, \ 240) \\
 \hline
-8 & 142--147 & (9,6,44) & (6,154) & (6,264) \\
+8 & 142--147 & (9, \ 6, \ 44) & (6, \ 154) & (6, \ 264) \\
 \hline
-9 & 148--152 & (9,5,48) & (5,168) & (5,288) \\
+9 & 148--152 & (9, \ 5, \ 48) & (5, \ 168) & (5, \ 288) \\
 \hline
-10 & 153--157 & (9,5,52) & (5,182) & (5,312) \\
+10 & 153--157 & (9, \ 5, \ 52) & (5, \ 182) & (5, \ 312) \\
 \hline
-11 & 158--161 & (9,4,56) & (4,196) & (4,336) \\
+11 & 158--161 & (9, \ 4, \ 56) & (4, \ 196) & (4, \ 336) \\
 \hline
-12 & 162--166 & (9,5,60) & (5,210) & (5,360) \\
+12 & 162--166 & (9, \ 5, \ 60) & (5, \ 210) & (5, \ 360) \\
 \hline
-13 & 167--169 & (9,3,64) & (3,224) & (3,384) \\
+13 & 167--169 & (9, \ 3, \ 64) & (3, \ 224) & (3, \ 384) \\
 \hline
-14 & 170--173 & (9,4,68) & (4,238) & (4,408) \\
+14 & 170--173 & (9, \ 4, \ 68) & (4, \ 238) & (4, \ 408) \\
 \hline
-15 & 174--177 & (9,4,72) & (4,252) & (4,432) \\
+15 & 174--177 & (9, \ 4, \ 72) & (4, \ 252) & (4, \ 432) \\
 \hline
-16 & 178--180 & (9,3,76) & (3,266) & (3,456) \\
+16 & 178--180 & (9, \ 3, \ 76) & (3, \ 266) & (3, \ 456) \\
 \hline
-17 & 181--183 & (9,3,80) & (3,280) & (3,480) \\
+17 & 181--183 & (9, \ 3, \ 80) & (3, \ 280) & (3, \ 480) \\
 \hline
-18 & 184--186 & (9,3,84) & (3,294) & (3,504) \\
+18 & 184--186 & (9, \ 3, \ 84) & (3, \ 294) & (3, \ 504) \\
 \hline
-19 & 187--189 & (9,3,88) & (3,308) & (3,528) \\
+19 & 187--189 & (9, \ 3, \ 88) & (3, \ 308) & (3, \ 528) \\
 \hline
-20 & 190--191 & (9,2,92) & (2,322) & (2,552) \\
+20 & 190--191 & (9, \ 2, \ 92) & (2, \ 322) & (2, \ 552) \\
 \hline
-21 & 192--194 & (9,3,96) & (3,336) & (3,576) \\
+21 & 192--194 & (9, \ 3, \ 96) & (3, \ 336) & (3, \ 576) \\
 \hline
-22 & 195--196 & (9,2,100) & (2,350) & (2,600) \\
+22 & 195--196 & (9, \ 2, \ 100) & (2, \ 350) & (2, \ 600) \\
 \hline
-23 & 197--199 & (9,3,104) & (3,364) & (3,624) \\
+23 & 197--199 & (9, \ 3, \ 104) & (3, \ 364) & (3, \ 624) \\
 \hline
-24 & 200--201 & (9,2,108) & (2,378) & (2,648) \\
+24 & 200--201 & (9, \ 2, \ 108) & (2, \ 378) & (2, \ 648) \\
 \hline
-25 & 202--203 & (9,2,112) & (2,392) & (2,672) \\
+25 & 202--203 & (9, \ 2, \ 112) & (2, \ 392) & (2, \ 672) \\
 \hline
-26 & 204--205 & (9,2,116) & (2,406) & (2,696) \\
+26 & 204--205 & (9, \ 2, \ 116) & (2, \ 406) & (2, \ 696) \\
 \hline
-27 & 206--207 & (9,2,120) & (2,420) & (2,720) \\
+27 & 206--207 & (9, \ 2, \ 120) & (2, \ 420) & (2, \ 720) \\
 \hline
-28 & 208--209 & (9,2,124) & (2,434) & (2,744) \\
+28 & 208--209 & (9, \ 2, \ 124) & (2, \ 434) & (2, \ 744) \\
 \hline
-29 & 210--211 & (9,2,128) & (2,448) & (2,768) \\
+29 & 210--211 & (9, \ 2, \ 128) & (2, \ 448) & (2, \ 768) \\
 \hline
-30 & 212--213 & (9,2,132) & (2,462) & (2,792) \\
+30 & 212--213 & (9, \ 2, \ 132) & (2, \ 462) & (2, \ 792) \\
 \hline
-31 & 214--215 & (9,2,136) & (2,476) & (2,816) \\
+31 & 214--215 & (9, \ 2, \ 136) & (2, \ 476) & (2, \ 816) \\
 \hline
-32 & 216--217 & (9,2,140) & (2,490) & (2,840) \\
+32 & 216--217 & (9, \ 2, \ 140) & (2, \ 490) & (2, \ 840) \\
 \hline
-33 & 218 & (9,1,144) & (1,504) & (1,864) \\
+33 & 218 & (9, \ 1, \ 144) & (1, \ 504) & (1, \ 864) \\
 \hline
-34 & 219--220 & (9,2,148) & (2,518) & (2,888) \\
+34 & 219--220 & (9, \ 2, \ 148) & (2, \ 518) & (2, \ 888) \\
 \hline
-35 & 221--222 & (9,2,152) & (2,532) & (2,912) \\
+35 & 221--222 & (9, \ 2, \ 152) & (2, \ 532) & (2, \ 912) \\
 \hline
 \end{tabular}
 	\caption{Dimensions of the forward ragged sliCQT, first 35 time buckets}
@@ -288,73 +288,74 @@ The STFT with a window of 4,096 and overlap of 1,024 results in a $\text{frequen
 		Block & Frequency bins & 3D shape & 2D overlap-add shape & 2D flat shape \\
 	 \hline
 	 \hline
-36 & 223 & (9,1,156) & (1,546) & (1,936) \\
 \hline
-37 & 224--225 & (9,2,160) & (2,560) & (2,960) \\
+36 & 223 & (9, \ 1, \ 156) & (1, \ 546) & (1, \ 936) \\
 \hline
-38 & 226 & (9,1,164) & (1,574) & (1,984) \\
+37 & 224--225 & (9, \ 2, \ 160) & (2, \ 560) & (2, \ 960) \\
 \hline
-39 & 227--228 & (9,2,168) & (2,588) & (2,1008) \\
+38 & 226 & (9, \ 1, \ 164) & (1, \ 574) & (1, \ 984) \\
 \hline
-40 & 229 & (9,1,172) & (1,602) & (1,1032) \\
+39 & 227--228 & (9, \ 2, \ 168) & (2, \ 588) & (2, \ 1,008) \\
 \hline
-41 & 230--231 & (9,2,176) & (2,616) & (2,1056) \\
+40 & 229 & (9, \ 1, \ 172) & (1, \ 602) & (1, \ 1,032) \\
 \hline
-42 & 232 & (9,1,180) & (1,630) & (1,1080) \\
+41 & 230--231 & (9, \ 2, \ 176) & (2, \ 616) & (2, \ 1,056) \\
 \hline
-43 & 233 & (9,1,184) & (1,644) & (1,1104) \\
+42 & 232 & (9, \ 1, \ 180) & (1, \ 630) & (1, \ 1,080) \\
 \hline
-44 & 234--235 & (9,2,188) & (2,658) & (2,1128) \\
+43 & 233 & (9, \ 1, \ 184) & (1, \ 644) & (1, \ 1,104) \\
 \hline
-45 & 236 & (9,1,192) & (1,672) & (1,1152) \\
+44 & 234--235 & (9, \ 2, \ 188) & (2, \ 658) & (2, \ 1,128) \\
 \hline
-46 & 237 & (9,1,196) & (1,686) & (1,1176) \\
+45 & 236 & (9, \ 1, \ 192) & (1, \ 672) & (1, \ 1,152) \\
 \hline
-47 & 238 & (9,1,200) & (1,700) & (1,1200) \\
+46 & 237 & (9, \ 1, \ 196) & (1, \ 686) & (1, \ 1,176) \\
 \hline
-48 & 239--240 & (9,2,204) & (2,714) & (2,1224) \\
+47 & 238 & (9, \ 1, \ 200) & (1, \ 700) & (1, \ 1,200) \\
 \hline
-49 & 241 & (9,1,208) & (1,728) & (1,1248) \\
+48 & 239--240 & (9, \ 2, \ 204) & (2, \ 714) & (2, \ 1,224) \\
 \hline
-50 & 242 & (9,1,212) & (1,742) & (1,1272) \\
+49 & 241 & (9, \ 1, \ 208) & (1, \ 728) & (1, \ 1,248) \\
 \hline
-51 & 243 & (9,1,216) & (1,756) & (1,1296) \\
+50 & 242 & (9, \ 1, \ 212) & (1, \ 742) & (1, \ 1,272) \\
 \hline
-52 & 244 & (9,1,220) & (1,770) & (1,1320) \\
+51 & 243 & (9, \ 1, \ 216) & (1, \ 756) & (1, \ 1,296) \\
 \hline
-53 & 245 & (9,1,224) & (1,784) & (1,1344) \\
+52 & 244 & (9, \ 1, \ 220) & (1, \ 770) & (1, \ 1,320) \\
 \hline
-54 & 246 & (9,1,228) & (1,798) & (1,1368) \\
+53 & 245 & (9, \ 1, \ 224) & (1, \ 784) & (1, \ 1,344) \\
 \hline
-55 & 247--248 & (9,2,232) & (2,812) & (2,1392) \\
+54 & 246 & (9, \ 1, \ 228) & (1, \ 798) & (1, \ 1,368) \\
 \hline
-56 & 249 & (9,1,236) & (1,826) & (1,1416) \\
+55 & 247--248 & (9, \ 2, \ 232) & (2, \ 812) & (2, \ 1,392) \\
 \hline
-57 & 250 & (9,1,240) & (1,840) & (1,1440) \\
+56 & 249 & (9, \ 1, \ 236) & (1, \ 826) & (1, \ 1,416) \\
 \hline
-58 & 251 & (9,1,244) & (1,854) & (1,1464) \\
+57 & 250 & (9, \ 1, \ 240) & (1, \ 840) & (1, \ 1,440) \\
 \hline
-59 & 252 & (9,1,248) & (1,868) & (1,1488) \\
+58 & 251 & (9, \ 1, \ 244) & (1, \ 854) & (1, \ 1,464) \\
 \hline
-60 & 253 & (9,1,252) & (1,882) & (1,1512) \\
+59 & 252 & (9, \ 1, \ 248) & (1, \ 868) & (1, \ 1,488) \\
 \hline
-61 & 254 & (9,1,256) & (1,896) & (1,1536) \\
+60 & 253 & (9, \ 1, \ 252) & (1, \ 882) & (1, \ 1,512) \\
 \hline
-62 & 255 & (9,1,264) & (1,924) & (1,1584) \\
+61 & 254 & (9, \ 1, \ 256) & (1, \ 896) & (1, \ 1,536) \\
 \hline
-63 & 256 & (9,1,268) & (1,938) & (1,1608) \\
+62 & 255 & (9, \ 1, \ 264) & (1, \ 924) & (1, \ 1,584) \\
 \hline
-64 & 257 & (9,1,272) & (1,952) & (1,1632) \\
+63 & 256 & (9, \ 1, \ 268) & (1, \ 938) & (1, \ 1,608) \\
 \hline
-65 & 258 & (9,1,276) & (1,966) & (1,1656) \\
+64 & 257 & (9, \ 1, \ 272) & (1, \ 952) & (1, \ 1,632) \\
 \hline
-66 & 259 & (9,1,280) & (1,980) & (1,1680) \\
+65 & 258 & (9, \ 1, \ 276) & (1, \ 966) & (1, \ 1,656) \\
 \hline
-67 & 260 & (9,1,284) & (1,994) & (1,1704) \\
+66 & 259 & (9, \ 1, \ 280) & (1, \ 980) & (1, \ 1,680) \\
 \hline
-68 & 261 & (9,1,288) & (1,1008) & (1,1728) \\
+67 & 260 & (9, \ 1, \ 284) & (1, \ 994) & (1, \ 1,704) \\
 \hline
-69 & 262 & (9,1,292) & (1,1022) & (1,1752) \\
+68 & 261 & (9, \ 1, \ 288) & (1, \ 1,008) & (1, \ 1,728) \\
+\hline
+69 & 262 & (9, \ 1, \ 292) & (1, \ 1,022) & (1, \ 1,752) \\
 \hline
 \end{tabular}
 	\caption{Dimensions of the forward ragged sliCQT, last 35 time buckets}
